Fixed the styling in the header so the subtitle doesn't jump outside of the hero image when the window is resized. Changed the hero class to just be a frame, and added the image into the html instead of the css. Added some media queries to make the different parts of the header and hero subtitle play nicely with different screen sizes

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -84,12 +84,31 @@ header h4 {
 }
 
 .hero {
-    height:200px;
-    width:100%;
+    max-height:200px;
+    min-width:100%;
     margin-bottom:25px;
-    background-image: url("../images/pexels-photo-11570494.jpeg");
-    background-size:cover;
-    background-position:center;
+    object-fit:cover;
+}
+
+.hero img {
+  width: 200em;
+  max-width:100%;
+  height: 100%;
+  max-height:200px;
+  background-size:cover;
+  background-position:center;
+  overflow:hidden;
+  object-fit: cover;
+}
+
+.hero .textlinks {
+  position:absolute;
+  font-size:20px;
+  font-weight:bold;
+  background-color: var(--lblue);
+  padding:5px 10px;
+  margin-left:80%;
+  margin-top:6em;
 }
 
 .blueback {
@@ -195,6 +214,7 @@ main .project-links .bigproject img {
     max-height:500px;
   object-fit:cover;
   transition: all 0.3s ease-in-out;
+  overflow:hidden;
   }
 
   main .project-links .bigproject img:hover {
@@ -212,6 +232,7 @@ main .project-links .bigproject img {
     width:700px;
     height:400px;
     object-fit:cover;
+    overflow:hidden;
     transition: all 0.3s ease-in-out;
   }
 
@@ -278,10 +299,25 @@ footer ul li {
   padding:4px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
+  header h1 {
+    font-size:150%;
+  }
+  
+  header nav {
+    justify-content:flex-start;
+  }
+  header nav ul {
+    flex-direction:column;
+  }
   h2 {
       font-size:100%;
   }
+
+  .hero .textlinks {
+    margin-top:1em;
+  }
+
   
 }
 
@@ -289,5 +325,9 @@ footer ul li {
   .code-card {
       flex-direction: row;
       flex-wrap:wrap;
+  }
+
+  .hero .textlinks {
+    margin-top:2em;
   }
 }
